v2/analyzer-egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: iam
spec:
  hosts:
  - iam.bluemix.net
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: iam
spec:
  hosts:
  - iam.bluemix.net
  tls:
  - match:
    - port: 443
      sni_hosts:
      - iam.bluemix.net
    route:
    - destination:
        host: iam.bluemix.net
        port:
          number: 443
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: watson
spec:
  hosts:
  - gateway.watsonplatform.net
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: watson
spec:
  hosts:
  - gateway.watsonplatform.net
  tls:
  - match:
    - port: 443
      sni_hosts:
      - gateway.watsonplatform.net
    route:
    - destination:
        host: gateway.watsonplatform.net
        port:
          number: 443
      weight: 100
