v2/guestbook-frontdoor.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
#  annotations:
#    kubernetes.io/ingress.class: istio
  name: guestbook-ingress
spec:
  rules:
    - host: andyistio.us-east.containers.mybluemix.net
      http:
        paths:
          - path: /
            backend:
              serviceName: guestbook
              servicePort: 80
